--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,368 @@
-/* место для вашего кода */
+.header {
+  margin: 92px 24px 96px 24px;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.header__links-list-item {
+  display: flex;
+  gap: 31px;
+  list-style-type: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.header__link_active::before {
+  list-style: circle;
+}
+
+.header__logo {
+  margin-left: 15px;
+  margin-right: 193px;
+  
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+  
+}
+
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  font-family: Raleway;
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.cover {
+  background-image: url(../images//cover.jpg);
+  background-position: center;
+  position: relative;
+  overflow: hidden; 
+}
+
+.cover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  opacity: 1; 
+  z-index: 1; 
+}
+
+.cover__title {
+  position: relative;
+  color: rgb(255, 255, 255);
+  font-size: 100px;
+  font-weight: 700;
+  padding: 165px 50px 0 50px;
+  z-index: 1;
+}
+
+.cover__title_text-one {
+  font-size: 100px;
+  letter-spacing: 20px;
+
+}
+
+
+.cover__title_text-two {
+  font-size: 100px;
+  margin: 20px 410px 20px 260px;
+  letter-spacing: 35px;
+}
+
+.cover__title_text-three {
+  font-size: 100px;
+  margin-left: 583px;
+  margin-bottom: 100px;
+  letter-spacing: 40px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 80px;
+}
+
+.cover__description {
+  display: flex;
+  align-items: center;
+  padding: 0 50px 51px 79px;
+}
+
+.cover__description-text {
+  color: rgb(255, 255, 255);
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin-right: 78px;
+  word-spacing: 18px;
+  z-index: 1;
+}
+
+.bet-button {
+  color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 12px 32px 11px 31px;
+  border: 1px solid white;
+  position: relative;
+  z-index: 2; 
+}
+
+.lots{
+  margin: 170px 24px 201px 24px;
+  gap: 25px
+  
+}
+
+.lots__heading {
+  padding-left: 40px;
+  padding-bottom: 19px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  list-style: none;
+
+}
+
+.lots__container {
+  display: flex;
+  gap: 25px;
+}
+
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 334px;
+  height: 563px;
+  position: relative;
+  z-index: 1; 
+  background: white;
+  overflow: hidden; 
+  
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  opacity: 1; 
+  z-index: 2;
+}
+
+.card__title, .card__text, .card__text-book, .card__text-picture {
+  position: relative;
+  z-index: 3;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  text-align: left;
+  padding: 51px 40px 0 40px;
+  color: white;
+}
+
+.card__text {
+  padding: 220px 40px 48px 40px;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  
+  
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.overlay {
+  background-color: black;
+  width: 334px;
+  height: 563px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card__text-book {
+  padding: 5px 40px 48px 40px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 400;
+  text-align: left;
+  flex-direction: column;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__text-picture {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 400;
+  padding: 100px 40px 48px 40px;
+}
+
+.lots__look-more-link {
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: 400;
+  margin: 35px 102px 0px 20px;
+}
+
+.about__title {
+  color: rgb(0, 0, 0);
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+  text-align: left;
+  text-transform: uppercase;
+  padding: 136px 396px 92px 359px;
+}
+
+.about__text {
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: 400;
+  text-align: left;
+  padding: 2px 5px 0px 359px;
+  height: 120px;
+  
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-left: 47px;
+  margin-top: 35px;
+
+}
+
+.about__logo-image {
+  display: flex;
+  width: 141.54px;
+  height: 112.55px;
+  justify-content: center;
+  align-items: center; 
+}
+
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 300px 50px 88px 50px;
+}
+
+.address a {
+  color: #000;
+  text-decoration: underline;
+  font-size: 18px;
+}
+
+.address p {
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.footer__menu {
+  display: flex;
+  align-items: center;
+}
+
+.footer__menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer__menu-list-item {
+  margin-right: 20px;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+  color: #000;
+  font-size: 18px;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+}
+
+.footer__social-list-item {
+  margin-right: 10px;
+}
+
+.footer__social-link {
+  text-decoration: none;
+  color: #000;
+}
+
+.footer__social-icon {
+  margin-right: 30px;
+  width: 48px;
+  height: 48px;
+  align-items: center;
+}
+
+
+
+
+
