--- a/styles/style.css
+++ b/styles/style.css
@@ -43,17 +43,18 @@
   height: 105px;
 }
 
-.address {
+address {
   margin-right: 61px;
-}
-
-.address p {
   font-size: 18px;
-  font-weight: 400;
   line-height: 25px;
 }
 
-.header__address {
+address p {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.address {
   display: flex;
   flex-direction: column;
   font-family: Raleway, sans-serif;
@@ -176,18 +177,19 @@
   text-transform: uppercase;
 }
 
+
 .lots__card-list {
   list-style: none;
 }
 
 .lots__container {
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   margin-left: 25px;
 }
 
 .card {
-  display: flex;
   flex-direction: column;
   width: 334px;
   height: 563px;
@@ -198,16 +200,16 @@
   background-size: cover;
 }
 
-.card::before {
+.background-opacity::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.6); 
   opacity: 1; 
-  z-index: 2;
+  z-index: 1;
 }
 
 .card__title, .card__text, .card__text-book, .card__text-picture {
@@ -230,6 +232,15 @@
   color: white;
   font-size: 20px;
   font-weight: 400;
+  height: 100%;
+}
+
+.card_type_book .card__text {
+  padding-top: 1px;
+}
+
+.card_type_picture .card__text {
+  padding-top: 99px;
 }
 
 .card-link {
@@ -245,25 +256,11 @@
   background-image: url(../images/card-lot-02.jpg);
 }
 
-.card__text-book {
-  padding: 1px 40px 48px 40px;
-  color: rgb(255, 255, 255);
-  font-size: 20px;
-  font-weight: 400;
-  text-align: left;
-  flex-direction: column;
-}
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
 }
 
-.card__text-picture {
-  color: rgb(255, 255, 255);
-  font-size: 20px;
-  font-weight: 400;
-  padding: 97px 40px 48px 40px;
-}
 
 .lots__look-more-link {
   margin: 31px 65px;
@@ -275,6 +272,37 @@
   font-weight: 400;
 }
 
+.about {
+  margin-top: 182px;
+}
+
+.about-info {
+  display: flex;
+  align-items: center;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;  
+  margin-left: 71px;
+  display: grid;
+  grid-template-columns: 1fr 1px;
+  gap: 123px;
+}
+
+.about__logo-image {
+  display: flex;
+  width: 141.54px;
+  height: 112.55px;
+  justify-content: center;
+  align-items: center;
+  margin-left: 133px;
+}
+
 .about__title {
   color: rgb(0, 0, 0);
   font-size: 40px;
@@ -282,7 +310,7 @@
   line-height: 47px;
   text-align: left;
   text-transform: uppercase;
-  padding: 252px 396px 97px 382px;
+  margin: 10px 10px 4px 72px;
 }
 
 .about__text {
@@ -298,26 +326,7 @@
   line-height: 24px;
   margin-left: 25px;
 }
-
-.about__logo {
-  width: 240px;
-  height: 240px;
-  background-color: black;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;  
-  margin-left: 71px;
-  margin-top: -244px;
-}
-
-.about__logo-image {
-  display: flex;
-  width: 141.54px;
-  height: 112.55px;
-  justify-content: center;
-  align-items: center; 
-}
+ 
 
 .footer {
   display: flex;
